edits for launching page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Chad Fike | CRT Terminal Portfolio</title>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles3.css" />
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -19,7 +19,7 @@
 [OK] Chad Fike Portfolio v1.79 Loaded.
     </pre>
   </div>
-  <audio id="key-sound" src="../sounds/click0.mp3" preload="auto"></audio>
+  <audio id="key-sound" src="assets/sounds/click0.mp3" preload="auto"></audio>
   <button onclick="document.getElementById('key-sound').play()">Test Sound</button>
 
   <div id="terminal" style="display: none;">
