--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     </pre>
   </div>
   <audio id="key-sound" src="assets/sounds/click0.mp3" preload="auto"></audio>
-  <button onclick="document.getElementById('key-sound').play()">Test Sound</button>
 
   <div id="terminal" style="display: none;">
     <div class="folder-pane">
@@ -34,11 +33,13 @@
 
     <div class="display-pane">
       <div id="terminal-output" class="terminal-output"></div>
-      <div class="footer-line">CTRL+C to abort | CRT Terminal Interface v1.79</div>
+      <div class="footer-line">Chad Fike Portfolio | CRT Terminal Interface v1.79</div>
     </div>
   </div>
 
   <script>
+    let activeTimeouts = [];
+
     document.addEventListener("DOMContentLoaded", () => {
   setTimeout(() => {
     document.getElementById("boot-screen").style.display = "none";
@@ -53,10 +54,22 @@
     }, 200);
   }, 3000);
 });
+//404 error page on ctrl+c
+document.addEventListener("keydown", function (e) {
+  if (e.ctrlKey && e.key === "c") {
+    document.body.style.transition = "0.1s";
+    document.body.style.backgroundColor = "#ff0000";
+    setTimeout(() => {
+      window.location.href = "/404.html";
+    }, 300);
+  }
+});
 
 
     const contentMap = {
       about: `cat about.txt
+
+Chad Fike | AI & Cloud Infrastructure Specialist
 
 Cloud-focused IT professional with hands-on experience automating Azure environments using Bicep, cloud-init, and CLI.
 
@@ -67,12 +80,19 @@ I graduated from University of Maryland Baltimore County (UMBC) with a Masters's
 
       experience: `cat experience.log
 Outlier.ai – AI Project Contributor (2024–Present)
-• Optimized LLM workflows
-• Top 5% performer on QA accuracy
+• Curated, tested, and optimized prompt inputs for large language model (LLM) refinement
+• Applied subject-matter expertise in AP History and Government to QA model outputs
+• Consistently earned top performance ratings (5/5) across 80%+ of tasks, with recognition for clarity, precision, and adherence to project guidelines
 
 Prometric – Systems Analyst (2022–2024)
-• Automated 10+ processes via Python & PowerShell
-• Streamlined SQL and infra troubleshooting`,
+• Resolved infrastructure issues across a 3-tiered Windows environment (2003–2016: DBs, apps, file/web servers)
+• Automated 10+ processes with Python and PowerShell, saving 100+ hours/month
+• Led automation rollout for Japan-based clients; reduced manual input by 40%
+• Developed XML-cleaning scripts in Python; reduced data error rates by 40%
+• Collaborated with global teams to escalate infrastructure incidents across DB, application, and network layers
+• Built internal documentation (Salesforce/SharePoint); supported on-call escalation and alerts
+• Created and maintained technical documentation (KBs) for infrastructure processes and procedures
+• Optimized SQL queries (MS SQL Server 2003/2008), improving query time by 25%`,
 
       projects: `cat projects.md
 Azure Infra Automation
@@ -92,14 +112,24 @@ AI-Powered Library Manager
 
 All Projects are available on my Github Profile - link under contact.sh`,
       skills: `cat skills.cfg
-[✓] Python  
-[✓] PowerShell  
-[✓] Azure CLI  
-[✓] Docker  
-[✓] Git / GitHub  
-[✓] FastAPI  
-[✓] SQL  
-[✓] Terraform`,
+[✓] Programming & Scripting:       [✓] DevOps & Automation:       [✓] Source Control:
+    Python                            Azure CLI                       Git / Github
+    (ML Libraries)                    ARM Templates                   GitHub Actions                                
+    PowerShell                        Bicep
+    SQL                               Terraform                   [✓] Systems & Tools:
+    XML Processing                    cloud-init                      Salesforce
+                                      CI/CD                           SharePoint
+                                      IaC                           
+
+[✓] Cloud & Infra:                [✓] Networking:                [✓] Core IT Skills:
+    Azure                             NSGs                             Troubleshooting
+    Linux (Ubuntu)                    RBAC                             Incident Mgmt.
+    Windows Server                    DNS                              Documentation
+    Docker                                                             Problem Solving
+    FastAPI                                                            Team Collab
+    NGINX                                                              Technical Writing
+    VMs / Containers
+`,
 
       contact: `cat contact.sh
 GitHub: <a href="https://github.com/cfikeAI" target="_blank">cfikeAI</a>  
@@ -109,6 +139,12 @@ Email: <a href="mailto:cfike607@gmail.com">cfike607@gmail.com</a>`
 
     function loadContent(key, event = null) {
   const output = document.getElementById("terminal-output");
+  // Clear any ongoing animations
+  activeTimeouts.forEach(clearTimeout);
+activeTimeouts = [];
+
+// Reset terminal content
+
   output.innerHTML = "";
 
   document.querySelectorAll(".folder-pane button").forEach((btn) =>
@@ -129,7 +165,7 @@ Email: <a href="mailto:cfike607@gmail.com">cfike607@gmail.com</a>`
     output.appendChild(lineElem);
     output.scrollTop = output.scrollHeight;
 
-    // ✅ If line contains a full anchor tag, inject as-is without typing
+    // If the line contains an anchor tag, set innerHTML directly
     if (line.includes("<a")) {
       lineElem.innerHTML = line;
       typeNextLine(); // continue immediately
@@ -158,7 +194,8 @@ function typeLine(line, element, callback, i = 0) {
       }
 
       const delay = Math.floor(Math.random() * 20) + 8; // ⌛ Random delay
-      setTimeout(typeChar, delay);
+      activeTimeouts.push(setTimeout(typeChar, delay));
+
     } else {
       // Add blinking cursor after line is fully typed
       const cursor = document.createElement("span");
